--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         <h4>
             <!-- <img src="images/icon_ins.png" alt="인스타그램"> -->
             <span class="ins"></span>
-            @rerebbabba_loveffc0f0
+            @rerebbabba_love
         </h4>
     </section>
 
